feat: P4ADEV-1752 added brokerId and brokerFiscalCode to UserInfo (#123)